--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,6 +30,6 @@ jobs:
       run: npm run pretest
     
     - name: Pre publish
-      run: npm test 
-      env:
-        CI: "true"
+      uses: GabrielBB/xvfb-action@v1.0
+      with:
+        run: npm test
