--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,3 +36,16 @@ jobs:
       uses: GabrielBB/xvfb-action@v1.0
       with:
         run: npm test
+
+    - name: Release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      run: npx semantic-release
+  
+    - name: Vscode release plugin
+      uses: JCofman/vscodeaction@master
+      env:
+        PUBLISHER_TOKEN: ${{ secrets.PUBLISHER_TOKEN }}
+      with:
+        args: publish -p $PUBLISHER_TOKEN 
