--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"publisher": "felipeguedes"
 	"name": "json2java",
 	"displayName": "json to java",
 	"description": "transforms json to java class",
