--- a/package.json
+++ b/package.json
@@ -57,5 +57,9 @@
 		"fail": [
 			"@semantic-release/github"
 		]
-	}
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/guedes4g/json-to-java.git"
+  	}
 }
