--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 	"devDependencies": {
 		"@semantic-release/github": "^7.0.7",
 		"@types/glob": "^7.1.1",
+		"@types/lodash.camelcase": "^4.3.6",
+		"@types/lodash.upperfirst": "^4.3.6",
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^13.11.0",
 		"@types/vscode": "^1.45.0",
@@ -62,5 +64,9 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/guedes4g/json-to-java.git"
+	},
+	"dependencies": {
+		"lodash.camelcase": "^4.3.0",
+		"lodash.upperfirst": "^4.3.1"
 	}
 }
